--- a/FE/src/app/pages/procesos/gestion/gestion.component.html
+++ b/FE/src/app/pages/procesos/gestion/gestion.component.html
@@ -1,7 +1,7 @@
 <div class="gestion-container">
   <div class="page-header">
     <h1 class="page-title">
-      <mat-icon class="mr-3 text-blue-600">workflow</mat-icon>
+      <mat-icon class="mr-3 text-blue-600">settings</mat-icon>
       Gestión de Procesos
     </h1>
     <p class="page-subtitle">
