--- a/FE/src/app/pages/mesa-control/validacion/validacion.component.html
+++ b/FE/src/app/pages/mesa-control/validacion/validacion.component.html
@@ -16,6 +16,7 @@
       opacity: 0 !important;
       position: absolute !important;
       pointer-events: none !important;
+      display: none !important;
     }
     
     /* Asegurar que los campos no tengan espacio residual */
