--- a/FE/src/app/pages/apps/social/change-password-dialog/change-password-dialog.component.scss
+++ b/FE/src/app/pages/apps/social/change-password-dialog/change-password-dialog.component.scss
@@ -52,6 +52,7 @@ mat-form-field.mat-mdc-form-field {
 
 .mat-mdc-form-field-subscript-wrapper {
   margin-top: 0.25rem;
+  display: none !important;
 }
 
 .mat-mdc-form-field-hint,
