--- a/FE/src/app/pages/procesos/integracion/integracion.component.scss
+++ b/FE/src/app/pages/procesos/integracion/integracion.component.scss
@@ -4,6 +4,11 @@
   min-height: 100vh;
   margin: 0;
 
+  // Ocultar hints de form fields
+  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+    display: none !important;
+  }
+
   .page-header {
     margin-bottom: 2rem;
     
