--- a/FE/src/app/pages/procesos/integracion/integracion.component.html
+++ b/FE/src/app/pages/procesos/integracion/integracion.component.html
@@ -312,7 +312,7 @@
             <span class="font-semibold">Documentos Requeridos</span>
           </div>
           <div class="text-xs text-gray-600 ml-6">
-            Pedido {{ selectedFile.numeroPedido }} • {{ selectedFile.proceso }} • {{ selectedFile.operacion }}
+            Pedido {{ selectedFile.numeroPedido }} • {{ selectedFile.proceso }} • {{ selectedFile.operacion }} • {{ selectedFile.tipoCliente }} • {{ selectedFile.modelo }} {{ selectedFile.vehiculo }} {{ selectedFile.year }} • VIN: {{ selectedFile.vin }}
           </div>
         </mat-card-title>
       </mat-card-header>
